5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1712_2502.log
== SUBMITION (2019-05-15 13:26:59) 
-- CODE:
k=int(input())
c=0
y=1
z=0
i=1
h=0
a=(12*0.5)
while(c<k):
	if(k>1):
		w=((-1)**(i+1))
		v=((1/y*(3**z)))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round(h*a,8))	
-- EXECUTION TIME:
0.151076
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
12341.87893221
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
728961.2511661
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
-629.22677323
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:27:01) 
-- CODE:
k=int(input())
c=0
y=1
z=0
i=1
h=0
a=(12*0.5)
while(c<k):
	if(k>1):
		w=((-1)**(i+1))
		v=((1/y*(3**z)))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round(h*a,8))	
-- EXECUTION TIME:
0.168992
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
12341.87893221
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
728961.2511661
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
-629.22677323
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:27:46) 
-- CODE:
k=int(input())
c=0
y=1
z=0
i=1
h=0
a=(12*0.5)
while(c<k):
	if(k>1):
		w=((-1)**(i+1))
		v=((1/(y*(3**z)))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round(h*a,8))	
-- EXECUTION TIME:
0.138871
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 12
    j=w*v
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:28:18) 
-- CODE:
k=int(input())
c=0
y=1
z=0
i=1
h=0
a=(12*0.5)
while(c<k):
	if(k>1):
		w=((-1)**(i+1))
		v=((1/(y*(3**z)))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a),8))	
-- EXECUTION TIME:
0.141041
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 12
    j=w*v
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:28:21) 
-- CODE:
k=int(input())
c=0
y=1
z=0
i=1
h=0
a=(12*0.5)
while(c<k):
	if(k>1):
		w=((-1)**(i+1))
		v=((1/(y*(3**z)))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a),8))	
-- ERROR:
File "XXXX", line 12
    j=w*v
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:29:35) 
-- CODE:
k=int(input())
c=0
y=1
z=0
i=1
h=0
a=(12*0.5)
while(c<k):
	if(k>1):
		w=((-1)**(i+1))
		v=((1/(y*(3**z)))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a),8))	
-- ERROR:
File "XXXX", line 12
    j=w*v
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:31:12) 
-- CODE:
k=int(input())
c=0
y=1
z=0
i=1
h=0
a=(12*0.5)
while(c<k):
	if(k>1):
		w=((-1)**(i+1))
		v=((1/(y*(3**z)))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a),8))	
-- ERROR:
File "XXXX", line 12
    j=w*v
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:31:39) 
-- CODE:
k=int(input())
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=((-1)**(i+1))
		v=((1/(y*(3**z)))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a),8))	
-- EXECUTION TIME:
0.163034
-- ERROR:
  File "/home/codebench/codes/1712/2502/main.py", line 12
    j=w*v
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:31:40) 
-- CODE:
k=int(input())
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=((-1)**(i+1))
		v=((1/(y*(3**z)))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a),8))	
-- ERROR:
File "XXXX", line 12
    j=w*v
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:32:03) 
-- CODE:
k=int(input())
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y*(3**z)))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a),8))	
-- ERROR:
File "XXXX", line 12
    j=w*v
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:32:22) 
-- CODE:
k=int(input())
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y*(3**z))))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a),8))	
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:32:25) 
-- CODE:
k=int(input())
c=0
y=1
z=0
i=1
h=0
a=(12**0.5)
while(c<k):
	if(k>1):
		w=(((-1)**(i+1)))
		v=((1/(y*(3**z))))
		j=w*v
	else:
		j=a
	c=c+1
	z=z+1
	i=i+1
	y=y+2
	h=h+j
print(round((h*a),8))	
-- EXECUTION TIME:
0.211721
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
